force-app/main/default/objects/LWC_Request_Path__c/LWC_Request_Path__c.object-meta.xml
<CustomObject>
    <description>This object will store the form/paths for a request</description>
    <label>Request Path</label>
    <nameField>
        <label>Request Path Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Request Path</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>