force-app/main/default/objects/LWC_Request_Path__c/fields/LWC_Description__c.field-meta.xml
<CustomField>
    <fullName>LWC_Description__c</fullName>
    <description>This field will store the description about the path</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>