force-app/main/default/objects/LWC_Request_Path__c/fields/LWC_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>LWC_Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will determine if the current path is active</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>