force-app/main/default/objects/LWC_Request_Path__c/fields/LWC_Request_ID__c.field-meta.xml
<CustomField>
    <fullName>LWC_Request_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will store the reference to parent request</description>
    <label>Request ID</label>
    <referenceTo>LWC_Request__c</referenceTo>
    <relationshipLabel>Request Path</relationshipLabel>
    <relationshipName>LWC_Request_Path</relationshipName>
    <type>Lookup</type>
</CustomField>