force-app/main/default/objects/LWC_Request_Path__c/fields/LWC_Sequence__c.field-meta.xml
<CustomField>
    <fullName>LWC_Sequence__c</fullName>
    <description>This field will store the sequence in which the path should appear on the form</description>
    <label>Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>